--- a/contact.html
+++ b/contact.html
@@ -259,7 +259,7 @@
                 <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
                 <div>
                   <h4>Address</h4>
-                  <p class="mb-2">Jr Huancallo 209</p>
+                  <p class="mb-2">Jr Huancayo 209</p>
                 </div>
               </div>
               <div class="d-flex p-4 rounded mb-4 bg-white">
@@ -273,7 +273,7 @@
                 <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
                 <div>
                   <h4>Telephone</h4>
-                  <p class="mb-2">(+012) 3456 7890</p>
+                  <p class="mb-2">+51 923291773</p>
                 </div>
               </div>
             </div>
